--- a/frontendProject/package.json
+++ b/frontendProject/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@jeremyhamm/vue-slider": "^0.2.0",
     "axios": "^0.20.0",
+    "crip-vue-notice": "^1.1.1",
     "fabric": "^4.2.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "i": "^0.3.6",
     "i18n": "^0.13.2",
     "v-selectmenu": "^2.0.2",
     "vue": "^2.6.12",
@@ -21,6 +24,7 @@
     "vue-cookies": "^1.7.4",
     "vue-i18n": "^8.22.2",
     "vue-notification": "^1.3.20",
+    "vue-numeric-input": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuejs-dialog": "^1.4.2",
     "vuetify": "^2.3.10",
